# calib-move

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
calib_move/: __init__.py  main.py
calib_move/config/: coreconfig.py  plotconfig.py  root.py
calib_move/core/: cliargs.py  collect.py  collecting.py  containers.py  gather.py  generatejson.py  homographies.py  jsontemplate.py  plotting.py  process.py  process_homographies.py  processing.py  videocontainer.py
calib_move/util/: generatejson.py  imgblending.py  jsonio.py  output.py  plot.py  util.py  video.py
outputs/: example_static_window_template.json
scripts/: run.py  run_batched.ipynb  run_gen_window_template_json.py  run_generate_template_json.py
tests/: test_cliargs.py  test_gather_vids.py  test_gen_template_json.py  test_generate_template_json.py  test_json.py  test_main.json  test_main.py  test_plots.py  test_process_video.py  test_static_window_template.json  test_time_string.py
tests/units/: test_cliargs.py  test_gather_vids.py  test_pbar.py  test_plots.py  test_process_video.py  test_time_string.py
