[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calib-move"
version = "0.1.0"
description = "simple utility for determining from a video whether a supposedly static camera moved"
authors = [
    {name = "Elias Steiner", email = "elias.steiner@gmx.ch"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/eliassteiner1/balgrist-calib-move"

[project.scripts]
calib-move-run = "calib_move.main:main_func"
calib-move-generate-template-json = "calib_move.core.jsontemplate:main_generate_json"

[tool.setuptools.packages.find]
include = ["calib_move", "calib_move.*"]